fix: remove slogan from SmallHeader and fix extra space in front card footer on larger screens

--- a/src/components/Header/SmallHeader.module.scss
+++ b/src/components/Header/SmallHeader.module.scss
@@ -26,15 +26,6 @@
     }
   }
 
-  .message {
-    font-size: 7px;
-    color: $color-default;
-    text-align: center;
-    width: 50%;
-    margin: 0 auto;
-    padding: 1rem;
-  }
-
   .batatas-container {
     display: flex;
     flex-direction: row;
