--- a/src/components/Intro/Intro.module.scss
+++ b/src/components/Intro/Intro.module.scss
@@ -70,13 +70,11 @@ section {
 
     > span,
     p {
-      color: $color-text;
       white-space: pre-line;
       width: 100%;
       height: 100%;
 
       strong {
-        border-radius: 0;
         white-space: nowrap;
         background: linear-gradient(
           to right,
@@ -100,6 +98,14 @@ section {
       width: 85%;
       text-align: center;
       margin: 0 auto;
+    }
+
+    q {
+
+      align-self: center;
+      em {
+        font-size: clamp(0.5em, 1vw + 0.5em, 1em);
+      }
     }
   }
 }
@@ -196,10 +202,6 @@ section {
   }
 }
 
-.message {
-  display: none;
-}
-
 @media (orientation: landscape) {
   section {
     width: 70dvw;
@@ -224,10 +226,9 @@ section {
     footer {
       grid-row: 2;
       grid-column: 2;
-      gap: 3px;
+      gap: 10px;
 
       width: fit-content;
-      height: 100%;
       background: rgba($color-canvas, 0);
       backdrop-filter: blur(30px);
 
@@ -247,9 +248,5 @@ section {
         padding: 0.5rem;
       }
     }
-  }
-
-  .message {
-    display: block;
   }
 }
